# Diplomski_analiza_dionica

./: .gitignore  CMakeLists.txt  LICENSE  README.md
nikola_pleic_diplomski/: CMakeLists.txt  CSVreading.c  CSVreading.h  nikola_pleic_diplomski.c  nikola_pleic_diplomski.h
nikola_pleic_diplomski/OpenCLInteraction/: CLinit.c  CLinit.h
nikola_pleic_diplomski/kernels/: CLV.cl
src/: CMakeLists.txt  CSVreading.c  CSVreading.h  calculate.c  calculate.h  nikola_pleic_diplomski.c  nikola_pleic_diplomski.h
src/OpenCLInteraction/: CLinit.c  CLinit.h
src/kernels/: CLV.cl  momentum.cl  moving_average.cl
